// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider component renders horizontal slider correctly 1`] = `
<Flex
  centered={true}
  display="flex"
  flexDirection="column"
  width={1}
>
  <Text
    color={null}
    dir="ltr"
    fontWeight="bold"
    uppercase={true}
  >
    Horizontal Slider
  </Text>
  <StyledSlider
    disabled={false}
    domain={
      Array [
        0,
        100,
      ]
    }
    onSlideEnd={[Function]}
    reversed={false}
    step={1}
    thickness={3}
    values={
      Array [
        30,
      ]
    }
    vertical={false}
  >
    <Label
      bottom={false}
      color={null}
      fontSize={2}
      left={0}
      position="absolute"
      textAlign={null}
      top={0}
    >
      Min Value
    </Label>
     
    <Label
      color={null}
      fontSize={2}
      position="absolute"
      right={0}
      textAlign={null}
      top={0}
    >
      Max Value
    </Label>
    <Rail>
      <Component />
    </Rail>
    <Handles>
      <Component />
    </Handles>
    <Tracks
      left={true}
      right={false}
    >
      <Component />
    </Tracks>
  </StyledSlider>
</Flex>
`;

exports[`Slider component renders horizontal slider correctly in rtl mode 1`] = `
<Flex
  centered={true}
  display="flex"
  flexDirection="column"
  width={1}
>
  <Text
    color={null}
    dir="rtl"
    fontWeight="bold"
    uppercase={true}
  >
    RTL Horizontal Slider
  </Text>
  <StyledSlider
    disabled={false}
    domain={
      Array [
        0,
        100,
      ]
    }
    onSlideEnd={[Function]}
    reversed={true}
    step={1}
    thickness={3}
    values={
      Array [
        30,
      ]
    }
    vertical={false}
  >
    <Label
      bottom={false}
      color={null}
      fontSize={2}
      left={0}
      position="absolute"
      textAlign={null}
      top={0}
    >
      Max Value
    </Label>
     
    <Label
      color={null}
      fontSize={2}
      position="absolute"
      right={0}
      textAlign={null}
      top={0}
    >
      Min Value
    </Label>
    <Rail>
      <Component />
    </Rail>
    <Handles>
      <Component />
    </Handles>
    <Tracks
      left={true}
      right={false}
    >
      <Component />
    </Tracks>
  </StyledSlider>
</Flex>
`;

exports[`Slider component renders vertical slider correctly 1`] = `
<Flex
  centered={true}
  display="flex"
  flexDirection="column"
  width={1}
>
  <Flex
    display="flex"
    mt={3}
  >
    <Text
      color={null}
      dir="ltr"
      fontWeight="bold"
      uppercase={true}
    >
      AN
    </Text>
  </Flex>
  <StyledSlider
    disabled={false}
    domain={
      Array [
        0,
        100,
      ]
    }
    height={150}
    onSlideEnd={[Function]}
    reversed={true}
    step={1}
    thickness={1}
    values={
      Array [
        30,
      ]
    }
    vertical={true}
  >
    <Label
      bottom={0}
      color={null}
      fontSize={2}
      left={0}
      position="absolute"
      textAlign="center"
      top={false}
    >
      minLabel
    </Label>
     
    <Label
      color={null}
      fontSize={2}
      position="absolute"
      right={null}
      textAlign="center"
      top={0}
    >
      maxLabel
    </Label>
    <Rail>
      <Component />
    </Rail>
    <Handles>
      <Component />
    </Handles>
    <Tracks
      left={false}
      right={true}
    >
      <Component />
    </Tracks>
  </StyledSlider>
</Flex>
`;
